fixed: load more overflow

--- a/assets/front-end/css/eael.css
+++ b/assets/front-end/css/eael.css
@@ -2281,6 +2281,7 @@ span.eael-testimonial-quote {
   padding: 1em 2em;
   border: 0px solid;
   font-size: 16px;
+  overflow: hidden;
 }
 
 .eael-load-more-button .button__loader {
