--- a/assets/front-end/css/post-grid.css
+++ b/assets/front-end/css/post-grid.css
@@ -132,6 +132,7 @@
   padding: 1em 2em;
   border: 0px solid;
   font-size: 16px;
+  overflow: hidden;
 }
 
 .eael-load-more-button .button__loader {
